--- a/client/views/test/list.html
+++ b/client/views/test/list.html
@@ -1,29 +1,32 @@
-<h3>Library</h3>
-<span ng-if="error">{{error}}</span>
-<div class="song-table admin">
+<div class="list-outer">
+
+  <h3>Library</h3>
+  <span ng-if="error">{{error}}</span>
+
+  <div class="song-table admin">
 
 
-  <div class="header song-row">
+    <div class="header song-row">
       <span class="song-attribute" ng-repeat="field in Library.fields">
         {{field}}
       </span>
-  </div>
+    </div>
 
-  <div class="song-row">
+    <div class="song-row">
       <span class="song-attribute" ng-repeat="field in Library.fields" ng-if="field !== 'active'">
         <input placeholder="{{field}}" ng-model="newSong[field]">
       </span>
       <span class="song-attribute">
         <input type="checkbox" ng-model="newSong['active']">
       </span>
-    <button class="song-row" ng-click="Library.add(newSong)">add</button>
+      <button class="song-row" ng-click="Library.add(newSong)">add</button>
 
-  </div>
+    </div>
 
 
-  <div ng-repeat="song in Library.getLibrary()"
-       class="song-row"
-       ng-class="{'editing':song.editing}">
+    <div ng-repeat="song in Library.getLibrary()"
+         class="song-row"
+         ng-class="{'editing':song.editing}">
 
     <span
         class="song-attribute"
@@ -41,19 +44,20 @@
         <input type="checkbox" ng-model="song.attrs['active']">
       </span>
 
-    <button ng-hide="song.editing" ng-click="song.editing = !song.editing">edit</button>
-    <button ng-show="song.editing" ng-click="Library.update(song.id, song.attrs)">save</button>
-    <button ng-show="song.editing" ng-click="Library.remove(song.id)">delete</button>
+      <button ng-hide="song.editing" ng-click="song.editing = !song.editing">edit</button>
+      <button ng-show="song.editing" ng-click="Library.update(song.id, song.attrs)">save</button>
+      <button ng-show="song.editing" ng-click="Library.remove(song.id)">delete</button>
+
+    </div>
+
 
   </div>
 
-
-</div>
-
-<hr>
+  <hr>
 <pre>new song:<br/>
   {{newSong | json}}
 </pre>
 <pre>Library JSON:<br/>
     {{Library.getLibrary() | json}}
   </pre>
+</div>
