--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -1,5 +1,6 @@
+<h1>xyz</h1>
 <h2 >
-  <a ui-sref='mine'>XYZ - mine</a>
+  <a ui-sref='mine'>my xyz</a>
 </h2>
 
-<h2 ui-sref='lobby'>XYZ - lobby</h2>
+<h2 ui-sref='lobby'>"lobby" (tba)</h2>
