--- a/client/views/main/media-player.html
+++ b/client/views/main/media-player.html
@@ -69,7 +69,7 @@
     remove
   </button>
 
-  <pre class="debug">
+  <pre class="debug" ng-if="false">
     {{Player.playingItem() | json}}
   </pre>
 </div>
