--- a/client/views/sidebar.html
+++ b/client/views/sidebar.html
@@ -1,6 +1,6 @@
 <div ng-hide="sidebarClosed">
 
-  <div class="close-button" ng-click="sidebarClosed = true"> X </div>
+  <div class="close-button" ng-click="sidebarClosed = true"> (close) </div>
   <h3><a ui-sref="home">XYZ - Mine</a></h3>
 
   <h3>
@@ -17,9 +17,9 @@
 
   <h4>test links</h4>
   <a ui-sref="list"> my xyz list </a> |
-  <a ui-sref="import.search"> import </a> |
+  <a ui-sref="import.search"> import </a> |<!--
   <a ui-sref="stream"> stream </a> |
-  <a ui-sref="embeds"> embed test </a> |
-  <a ui-sref="social"> social test </a>
+  <a ui-sref="embeds"> embed test </a> |-->
+  <a ui-sref="social"> connect to facebook </a>
 
 </div>
