--- a/client/views/import/control-explore.html
+++ b/client/views/import/control-explore.html
@@ -1,6 +1,9 @@
-<h4>load neat songs from your facebook feed</h4><br/>
-<button ng-click="explore(Social.FB.loadPosts())">facebook posts </button>
+<button ng-if="!FB.loggedIn()" ng-click="FB.login().then(FB.loadMe())">login to FB</button>
 
+<div ng-if="FB.loggedIn()">
+  <h4>load neat songs from your facebook feed</h4><br/>
+  <button ng-click="explore(Social.FB.loadPosts())">facebook posts</button>
+</div>
 <!--
 <button ng-click="explore(MediaAPI.SC.likes())">soundcloud likes</button>
 <button ng-click="explore(MediaAPI.SC.playlists())">soundcloud playlists</button>
