--- a/client/views/sidebar.html
+++ b/client/views/sidebar.html
@@ -17,8 +17,8 @@
 
   <h4>test links</h4>
   <a ui-sref="list"> my xyz list </a> |
-  <a ui-sref="import.search"> import </a> |<!--
-  <a ui-sref="stream"> stream </a> |
+  <a ui-sref="import.search"> import </a> |
+  <a ui-sref="stream"> stream </a> |<!--
   <a ui-sref="embeds"> embed test </a> |-->
   <a ui-sref="social"> connect to facebook </a>
 
