--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -1,6 +1,55 @@
 <h1>xyz</h1>
-<h2 >
+<h2>
   <a ui-sref='mine'>my xyz</a>
 </h2>
 
 <h2 ui-sref='lobby'>"lobby" (tba)</h2>
+
+
+<div ng-if="!User.get()">
+
+  <h2>register:</h2>
+  <form ng-submit="User.register(registerData).then(User.login)">
+
+    <input ng-model="registerData.email" placeholder="email" type="email" required>
+    <input ng-model="registerData.name" placeholder="name">
+    <input ng-model="registerData.password" placeholder="password" type="password" required>
+
+    <input type="submit" value="submit"/>
+  </form>
+
+  <h2>or login:</h2>
+  <form ng-submit="User.login(loginData).catch(showError)">
+
+    <input ng-model="loginData.email" placeholder="email" type="email" required>
+    <input ng-model="loginData.password" placeholder="password" type="password" required>
+
+    <input type="submit" value="submit"/>
+  </form>
+
+</div>
+
+<div ng-if="User.attrs()">
+
+  Welcome to XYZ: {{User.attrs() | json}}
+
+  <form ng-submit="User.update(new).catch(showError)">
+
+    <input ng-model="new.name" placeholder="update name">
+    <input type="submit" value="update data">
+
+  </form>
+
+  <ul ng-if="User.spaces()">
+    <li ng-repeat="space in User.spaces()">
+      {{space.name}}
+    </li>
+  </ul>
+
+  <input ng-model="newSpace.name" placeholder="new space name">
+  <button ng-click="User.addSpace(newSpace)">add new space </button>
+
+  <button ng-click="User.logout()">Log out</button>
+</div>
+
+<span ng-if="error">{{error}}</span>
