more spaces, bug fix, etc

--- a/client/views/sidebar.html
+++ b/client/views/sidebar.html
@@ -1,7 +1,13 @@
+
+
 <div ng-hide="sidebarClosed">
 
+  <span >
+  welcome, {{viewer}}
+</span>
+
   <div class="close-button" ng-click="sidebarClosed = true"> (close) </div>
-  <h3><a ui-sref="home">XYZ - Mine</a></h3>
+  <h3><a ui-sref="base">XYZ home</a></h3>
 
   <h3>
     Thanks for checking out XYZ.
