--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -6,7 +6,10 @@
 <h2 ui-sref='lobby'>"lobby" (tba)</h2>
 
 
-  <span ng-repeat="space in allSpaces">{{space.name}}, </span>
+<span ng-repeat="space in allSpaces">
+  <a ui-sref="space({id:space.id})">
+    {{space.name}}
+  </a>, </span>
 
 
 <div ng-if="!User.loggedIn()">
