--- a/client/views/import/container.html
+++ b/client/views/import/container.html
@@ -5,7 +5,7 @@
 a preview box
 
 </div>
-<h3><a ui-sref="mine">xyz home</a></h3>
+<h3><a ui-sref="base">xyz home</a></h3>
 <ul class="tabs">
   <li ui-sref="import.search">search
   </li>
