--- a/client/views/main/landing.html
+++ b/client/views/main/landing.html
@@ -1,6 +1,6 @@
 <h1>xyz</h1>
 <h2>
-  <a ui-sref='mine'>my xyz</a>
+  <a ui-sref='base'>XYZ</a>
 </h2>
 
 <h2 ui-sref='lobby'>"lobby" (tba)</h2>
@@ -8,7 +8,7 @@
 
 <span ng-repeat="space in allSpaces">
   <a ui-sref="space({id:space.id})">
-    {{space.name}}
+    {{space.name}} ({{space.owner.name}}) <button ng-click="deleteSpace(space).catch(showError)">x</button>
   </a>, </span>
 
 
@@ -53,7 +53,8 @@ LOGGED IN
   <ul ng-if="User.spaces">
     you own some spaces
     <li ng-repeat="space in User.spaces">
-      {{space.name }}
+      <a ui-sref="space({id:space.id})">{{space.name }}<a/>
+        <button ng-click="deleteSpace(space).catch(showError)">x</button>
     </li>
   </ul>
   <span ng-if="!User.spaces">
