--- a/client/views/xyzspace.html
+++ b/client/views/xyzspace.html
@@ -4,7 +4,7 @@
 <h2 class="space-title"> {{space.name}} ({{owner.name}})</h2>
 
 
-<div class="xyz-item" ng-repeat="item in Library.getLibrary()"
+<div class="xyz-item" ng-repeat="item in space.getLibrary()"
      ng-if="Library.getLibrary().length > 0"
      xyz-draggable
      ng-click="Library.isPlayable(item)? queueIfNotDragging(item): Player.show(item)">
