rework sidebar templates, set 'space' in Library service

--- a/client/views/sidebar/import/import-container.html
+++ b/client/views/sidebar/import/import-container.html
@@ -1,17 +1,18 @@
-
+space is [{{space | json}}]
 
 <div class="preview-box" ng-include="'views/main/media-player.html'"
     ng-controller="PreviewCtrl">
 a preview box
 
 </div>
-<h3><a ui-sref="base">xyz home</a></h3>
+<h3><a ui-sref="base">import tools</a></h3>
 <ul class="tabs">
   <li ui-sref="import.search">search
   </li>
   <li ui-sref="import.explore">explore
   </li>
 </ul>
+<!--
 
 <div ui-view="importControls">
 import controls
@@ -26,3 +27,4 @@ import controls
 import selector
 </div>
 
+-->
