--- a/client/views/sidebar/import/import-container.html
+++ b/client/views/sidebar/import/import-container.html
@@ -1,4 +1,3 @@
-space is [{{space | json}}]
 
 <div class="preview-box" ng-include="'views/main/media-player.html'"
     ng-controller="PreviewCtrl">
@@ -7,12 +6,12 @@ a preview box
 </div>
 <h3><a ui-sref="base">import tools</a></h3>
 <ul class="tabs">
-  <li ui-sref="import.search">search
+  <li ui-sref="space.search">search
   </li>
-  <li ui-sref="import.explore">explore
+  <li ui-sref="space.explore">explore
   </li>
 </ul>
-<!--
+
 
 <div ui-view="importControls">
 import controls
@@ -27,4 +26,4 @@ import controls
 import selector
 </div>
 
--->
+
