--- a/client/views/sidebar/import/import-container.html
+++ b/client/views/sidebar/import/import-container.html
@@ -1,14 +1,14 @@
-
 <div class="preview-box" ng-include="'views/main/media-player.html'"
     ng-controller="PreviewCtrl">
 a preview box
 
 </div>
+
 <h3><a ui-sref="base">import tools</a></h3>
 <ul class="tabs">
-  <li ui-sref="space.search">search
+  <li ui-sref="space.search" ui-sref-active="active">search
   </li>
-  <li ui-sref="space.explore">explore
+  <li ui-sref="space.explore" ui-sref-active="active">explore
   </li>
 </ul>
 
