--- a/client/views/xyzspace.html
+++ b/client/views/xyzspace.html
@@ -34,14 +34,14 @@
 
   <div class="xyz-item" style="left:45%; top:10%;">
 
-    <div class="default dot">
+    <div class="default dot" ui-sref="space.search">
 
     </div>
 
 
-    <div class="hover" ui-sref="import.search">
+    <div class="hover" ui-sref="space.search">
 
-      no items (click to add an item)
+      no items (click to open search panel)
 
     </div>
   </div>
