--- a/client/scss/base/_variables.scss
+++ b/client/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 // Our variables
-$base-header-font-family:  "futura-pt", sans-serif;
-$base-font-family:  "helvetica neue", sans-serif;
+$base-header-font-family:  "courier new", sans-serif;
+$base-font-family:  "courier new", sans-serif;
 $base-body-font-family:  "minion-pro", sans-serif, serif;
 
 $base-font-size:   1em;
