misc social and server controller

--- a/client/views/sidebar/import/control-explore.html
+++ b/client/views/sidebar/import/control-explore.html
@@ -2,7 +2,7 @@
 
 <div ng-if="FB.loggedIn()">
   <h4>load neat songs from your facebook feed. click the button again to load more</h4><br/>
-  <button ng-click="explore(Social.FB.loadPosts())">facebook posts</button>
+  <button ng-click="explore(Social.FB.loadPosts())">more FB posts</button>
 </div>
 <!--
 <button ng-click="explore(MediaAPI.SC.likes())">soundcloud likes</button>
